image path solved

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="home-content rightside">
-          <img src="images/sadh1.jpg" alt="" />
+          <img src="./images/sadh1.jpg" alt="" />
         </div>
       </section>
 
@@ -65,7 +65,7 @@
           <div class="title"><span>About Me</span></div>
           <div class="about-details">
             <div class="left">
-              <img src="images/web.jpg" alt="" />
+              <img src="./images/web.jpg" alt="" />
             </div>
             <div class="right">
               <div class="topic">Designing Is My Passion</div>
